update for php newrelic config; apache servername gripes; sane logging

--- a/apache/log.conf
+++ b/apache/log.conf
@@ -1,10 +1,7 @@
-
-SetEnvIf X-Forwarded-For ".+" forwarded
-CustomLog "|/usr/bin/logger --tag apache --stderr" "%h %V %m %U %q %>s %D %B" env=!forwarded
-CustomLog "|/usr/bin/logger --tag apache --stderr" "%h %V %m %U %q %>s %D %B \"%{X-Forwarded-For}i\"" env=forwarded
-
+ServerName apache
 ErrorLog syslog
 
 # The most efficient way to serve files and cache objects.
 EnableSendFile On
 HostnameLookups Off
+BufferedLogs On
