--- a/apache/php-fpm.conf
+++ b/apache/php-fpm.conf
@@ -1,4 +1,5 @@
 <VirtualHost 127.0.0.3:80>
+  ServerName fpm
   DocumentRoot /var/www
 
   <Location />
@@ -36,4 +37,7 @@
 
   # We apparently can't trust WP to return a sane max-age.
   Header edit* Cache-Control max-age=0 "max-age=300"
+
+  CustomLog "|/usr/bin/logger --tag apache --stderr" "%h %V %m %U %q %>s %D %B \"%{X-Forwarded-For}i\""
+
 </VirtualHost>
