--- a/apache/proxy.conf
+++ b/apache/proxy.conf
@@ -1,4 +1,5 @@
 <VirtualHost *:80>
+  ServerName proxy
 	# Normalise Cookie: remove noisy cookies: Google Analytics.
 	RequestHeader edit* Cookie "__utm.=.*?(?:$|;\s*)" ""
 	# Unset the header if we've no cookies left.
