added explicit proxy worker; set proxy URI to have trailing slash

--- a/apache/php-fpm.conf
+++ b/apache/php-fpm.conf
@@ -23,11 +23,14 @@
   </Location>
 
   <Location ~ "^/(ping|status)-fpm$">
-    SetHandler "proxy:fcgi://fastcgi:9000"
+    SetHandler "proxy:fcgi://fastcgi:9000/"
   </Location>
 
   # Requires that the PHP-FPM pool is not chrooted, or at least chrooted the same as apache.
-  AddHandler "proxy:fcgi://fastcgi:9000" .php
+  AddHandler "proxy:fcgi://fastcgi:9000/" .php
+
+  <Proxy "fcgi://fastcgi:9000/" enablereuse=on max=5>
+  </Proxy>
 
   # For any file on disk, assume a distant expiry date.
   # The cache requires an Expires/Cache-Control header for files when requested
