tidied up some conf; removed Proxy choke for FastCGI

--- a/apache/php-fpm.conf
+++ b/apache/php-fpm.conf
@@ -18,10 +18,6 @@
     RedirectMatch 404 "\.php"
   </Location>
 
-  <Location "/status-apache">
-    SetHandler server-status
-  </Location>
-
   <Location ~ "^/(ping|status)-fpm$">
     SetHandler "proxy:fcgi://fastcgi:9000/"
   </Location>
@@ -29,17 +25,15 @@
   # Requires that the PHP-FPM pool is not chrooted, or at least chrooted the same as apache.
   AddHandler "proxy:fcgi://fastcgi:9000/" .php
 
-  <Proxy "fcgi://fastcgi:9000/" enablereuse=on max=5>
+  <Proxy "fcgi://fastcgi:9000/">
+    ExpiresDefault "access plus 5 minutes"
   </Proxy>
 
   # For any file on disk, assume a distant expiry date.
   # The cache requires an Expires/Cache-Control header for files when requested
   # with a query string (like WordPress does for versioned CSS/JS files).
   ExpiresActive On
-  ExpiresDefault "modifcation plus 5 minutes"
-
-  # We apparently can't trust WP to return a sane max-age.
-  Header edit* Cache-Control max-age=0 "max-age=300"
+  ExpiresDefault "modifcation plus 1 day"
 
   CustomLog "|/usr/bin/logger --tag apache --stderr" "%h %V %m %U %q %>s %D %B \"%{X-Forwarded-For}i\""
 
