--- a/apache/proxy.conf
+++ b/apache/proxy.conf
@@ -27,4 +27,9 @@
 
 	# Output some interesting performance stats.
 	Header always set X-Performance "%D %t %l %i %b"
+
+  <Location "/status-apache">
+    SetHandler server-status
+  </Location>
+
 </VirtualHost>
