--- a/fpm/www.conf
+++ b/fpm/www.conf
@@ -247,7 +247,7 @@ ping.path = /ping-fpm
 ; The access log file
 ; Default: not set
 ;access.log = log/$pool.access.log
-access.log = syslog
+;access.log = syslog
 
 ; The access log format.
 ; The following syntax is allowed
@@ -308,14 +308,14 @@ access.log = syslog
 ; Default Value: not set
 ; Note: slowlog is mandatory if request_slowlog_timeout is set
 ;slowlog = log/$pool.log.slow
-slowlog = syslog
+;slowlog = syslog
 
 ; The timeout for serving a single request after which a PHP backtrace will be
 ; dumped to the 'slowlog' file. A value of '0s' means 'off'.
 ; Available units: s(econds)(default), m(inutes), h(ours), or d(ays)
 ; Default Value: 0
 ;request_slowlog_timeout = 0
-request_slowlog_timeout = 15s
+;request_slowlog_timeout = 15s
 
 ; The timeout for serving a single request after which the worker process will
 ; be killed. This option should be used when the 'max_execution_time' ini option
@@ -394,9 +394,9 @@ catch_workers_output = yes
 ; Default Value: nothing is defined by default except the values in php.ini and
 ;                specified at startup with the -d argument
 ;php_admin_value[sendmail_path] = /usr/sbin/sendmail -t -i -f www@my.domain.com
-;php_flag[display_errors] = off
-;php_admin_value[error_log] = syslog
-;php_admin_flag[log_errors] = on
+php_flag[display_errors] = off
+php_admin_value[error_log] = syslog
+php_admin_flag[log_errors] = on
 php_admin_value[memory_limit] = 128M
 ;php_value[cgi.fix_pathinfo] = 0
 ;php_value[proxy-fcgi-pathinfo] = 0
