--- a/apache/php-fpm.conf
+++ b/apache/php-fpm.conf
@@ -18,6 +18,10 @@
     RedirectMatch 404 "\.php"
   </Location>
 
+  <Location "/status-apache">
+    SetHandler server-status
+  </Location>
+
   <Location ~ "^/(ping|status)-fpm$">
     SetHandler "proxy:fcgi://fastcgi:9000/"
   </Location>
