authenticated access to stats pages

--- a/apache/php-fpm.conf
+++ b/apache/php-fpm.conf
@@ -18,6 +18,14 @@
     RedirectMatch 404 "\.php"
   </Location>
 
+  <Location ~ "^/status-(apache|fpm)$">
+    AuthType basic
+    AuthName Stats
+    AuthBasicProvider file
+    AuthUserFile /etc/htpasswd
+    Require user stats
+  </Location>
+
   <Location "/status-apache">
     SetHandler server-status
   </Location>
