added missing Vary header for encoding, hence some links downloaing!

--- a/apache/cache.conf
+++ b/apache/cache.conf
@@ -17,6 +17,9 @@
    # Vary on the protocol, as we use this header to punk is_ssl in wordpress.
   Header merge Vary X-Forwarded-Proto
 
+  # Make sure we Vary on Accept-Encoding (gzip, deflate)
+  Header merge Vary Accept-Encoding
+
   # If a max-age is set, propagate it into s-maxage for surrogate proxies
   # unless s-maxage is already set.
   SetEnvIf Cache-Control max-age=([[:digit:]]+) S_MAXAGE=$1
