fixed http config for serving files direct from apache

--- a/apache/cache.conf
+++ b/apache/cache.conf
@@ -1,5 +1,7 @@
 <VirtualHost 127.0.0.2:80>
   ServerName cache
+  DocumentRoot /var/www
+
   CacheDetailHeader On
   CacheEnable disk /
   CacheHeader On
@@ -34,4 +36,5 @@
   # Stale serving is a good thing!
   Header merge Cache-Control stale-while-revalidate=86400
   Header merge Cache-Control stale-if-error=86400
+
 </VirtualHost>
