--- a/apache/log.conf
+++ b/apache/log.conf
@@ -1,7 +1,6 @@
 ServerName apache
-ErrorLog syslog
-
-# The most efficient way to serve files and cache objects.
-EnableSendFile On
 HostnameLookups Off
 BufferedLogs On
+ErrorLog syslog
+CustomLog "|/usr/bin/logger --tag apache --stderr" "%h %V %m %U %q %>s %D %B \"%{X-Forwarded-For}i\""
+EnableSendFile On
