--- a/apache/php-fpm.conf
+++ b/apache/php-fpm.conf
@@ -2,51 +2,17 @@
   ServerName fpm
   DocumentRoot /var/www
 
-  <Location />
-    DirectoryIndex disabled
-    DirectoryIndex index.php
-    Options -Indexes
-  </Location>
-
+  DirectoryIndex disabled
+  DirectoryIndex index.php
+  Options -Indexes
+  
   # https://httpd.apache.org/docs/2.4/mod/mod_dir.html#fallbackresource
   # This is the contemporary way to hand requests off to PHP/WP/whatever
   FallbackResource /index.php
 
-  # Disable PHP for uploads and deny any request for a PHP file.
-  <Location /wp-content/uploads/>
-    DirectoryIndex disabled
-    RedirectMatch 404 "\.php"
-  </Location>
-
-  <Location ~ "^/status-(apache|fpm)$">
-    AuthType basic
-    AuthName Stats
-    AuthBasicProvider file
-    AuthUserFile /etc/htpasswd
-    Require user stats
-  </Location>
-
-  <Location "/status-apache">
-    SetHandler server-status
-  </Location>
-
+  AddHandler "proxy:fcgi://fastcgi:9000" .php
   <Location ~ "^/(ping|status)-fpm$">
-    SetHandler "proxy:fcgi://fastcgi:9000/"
+    SetHandler "proxy:fcgi://fastcgi:9000"
   </Location>
-
-  # Requires that the PHP-FPM pool is not chrooted, or at least chrooted the same as apache.
-  AddHandler "proxy:fcgi://fastcgi:9000/" .php
-
-  <Proxy "fcgi://fastcgi:9000/">
-    ExpiresDefault "access plus 5 minutes"
-  </Proxy>
-
-  # For any file on disk, assume a distant expiry date.
-  # The cache requires an Expires/Cache-Control header for files when requested
-  # with a query string (like WordPress does for versioned CSS/JS files).
-  ExpiresActive On
-  ExpiresDefault "modifcation plus 1 day"
-
-  CustomLog "|/usr/bin/logger --tag apache --stderr" "%h %V %m %U %q %>s %D %B \"%{X-Forwarded-For}i\""
 
 </VirtualHost>
