--- a/apache/proxy.conf
+++ b/apache/proxy.conf
@@ -1,7 +1,8 @@
 <VirtualHost *:80>
   ServerName proxy
+  DocumentRoot /var/www
 
-  # Normalise Cookie: remove noisy cookies: Google Analytics.
+  # Normalise Cookie: remove known noisy cookies: Google Analytics.
   RequestHeader edit* Cookie "__utm.=.*?(?:$|;\s*)" ""
   # Unset the header if we've no cookies left.
   RequestHeader unset Cookie "expr=-z %{req:Cookie}"
@@ -16,12 +17,33 @@
   RequestHeader set X-Woocommerce-Session-Customer anonymous env=!WOOCOMMERCE_SESSION_CUSTOMER
   RequestHeader set X-Woocommerce-Session-Customer %{WOOCOMMERCE_SESSION_CUSTOMER}e env=WOOCOMMERCE_SESSION_CUSTOMER
 
-  ProxyPass / http://127.0.0.2/
   ProxyPreserveHost On
+
+  AddHandler "proxy:http://127.0.0.2" .php
+  <If "!-f %{REQUEST_FILENAME}">
+    SetHandler "proxy:http://127.0.0.2"
+  </If>
+
+  <Directory /var/www/wp-content/uploads/>
+    RedirectMatch 404 "\.php"
+  </Directory>
+
+  <Location ~ "^/status-(apache|fpm)$">
+    AuthType basic
+    AuthName Stats
+    AuthBasicProvider file
+    AuthUserFile /etc/htpasswd
+    Require user stats
+  </Location>
+
+  <Location "/status-apache">
+    SetHandler server-status
+  </Location>
 
   # Remove the Vary headers used by the cache, don't forget to remove the commas too.
   Header edit* Vary X-Woocommerce-(?:Cart-Hash|Session-Customer),? ""
   Header edit* Vary X-Forwarded-Proto,? ""
+  #Header edit* Vary Cookie,? ""
 
   # Unset the Vary header if it's empty.
   Header unset Vary "expr=-z %{resp:Vary}"
@@ -29,4 +51,9 @@
   # Output some interesting performance stats.
   Header always set X-Performance "%D %t %l %i %b"
 
+  # For any file on disk, assume a distant expiry date.
+  # The cache requires an Expires/Cache-Control header for files when requested
+  # with a query string (like WordPress does for versioned CSS/JS files).
+  ExpiresActive On
+  ExpiresDefault "modifcation plus 1 year"
 </VirtualHost>
