--- a/apache/php-fpm.conf
+++ b/apache/php-fpm.conf
@@ -2,10 +2,6 @@
   ServerName fpm
   DocumentRoot /var/www
 
-  DirectoryIndex disabled
-  DirectoryIndex index.php
-  Options -Indexes
-  
   # https://httpd.apache.org/docs/2.4/mod/mod_dir.html#fallbackresource
   # This is the contemporary way to hand requests off to PHP/WP/whatever
   FallbackResource /index.php
@@ -14,5 +10,10 @@
   <Location ~ "^/(ping|status)-fpm$">
     SetHandler "proxy:fcgi://fastcgi:9000"
   </Location>
+
+  Header add X-Server fpm
+
+  ExpiresActive On
+  ExpiresDefault "access plus 5 minutes"
 
 </VirtualHost>
