--- a/apache/proxy.conf
+++ b/apache/proxy.conf
@@ -18,14 +18,14 @@
   RequestHeader set X-Woocommerce-Session-Customer %{WOOCOMMERCE_SESSION_CUSTOMER}e env=WOOCOMMERCE_SESSION_CUSTOMER
 
   ProxyPreserveHost On
-
-  AddHandler "proxy:http://127.0.0.2" .php
-  <If "!-f %{REQUEST_FILENAME}">
-    SetHandler "proxy:http://127.0.0.2"
-  </If>
+  DirectoryIndex disabled
+  DirectorySlash off
+  Options -Indexes
 
   <Directory /var/www/wp-content/uploads/>
+    RemoveHandler .php
     RedirectMatch 404 "\.php"
+    RewriteEngine off
   </Directory>
 
   <Location ~ "^/status-(apache|fpm)$">
@@ -40,10 +40,19 @@
     SetHandler server-status
   </Location>
 
+  AddHandler "proxy:http://127.0.0.2" .php
+
+  # REQUEST_URI         The path part of the request's URI
+  # REQUEST_FILENAME    The full local filesystem path to the file or script matching the request, if this has already
+  #                     been determined by the server at the time REQUEST_FILENAME is referenced. Otherwise, such as
+  #                     when used in virtual host context, the same value as REQUEST_URI
+  RewriteEngine on
+  RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} !-f
+  RewriteRule .* http://127.0.0.2$0 [P,QSA]
+
   # Remove the Vary headers used by the cache, don't forget to remove the commas too.
   Header edit* Vary X-Woocommerce-(?:Cart-Hash|Session-Customer),? ""
   Header edit* Vary X-Forwarded-Proto,? ""
-  #Header edit* Vary Cookie,? ""
 
   # Unset the Vary header if it's empty.
   Header unset Vary "expr=-z %{resp:Vary}"
@@ -51,9 +60,5 @@
   # Output some interesting performance stats.
   Header always set X-Performance "%D %t %l %i %b"
 
-  # For any file on disk, assume a distant expiry date.
-  # The cache requires an Expires/Cache-Control header for files when requested
-  # with a query string (like WordPress does for versioned CSS/JS files).
-  ExpiresActive On
-  ExpiresDefault "modifcation plus 1 year"
+  Header add X-Server proxy
 </VirtualHost>
