--- a/apache/cache.conf
+++ b/apache/cache.conf
@@ -9,6 +9,7 @@
   CacheIgnoreNoLastMod On # Use CacheDefaultExpire (defaults to one hour)
   CacheLock On
   CacheStoreExpired On
+  CacheQuickHandler Off
 
   ProxyPass / http://127.0.0.3/
   ProxyPreserveHost On
@@ -22,19 +23,10 @@
   # Make sure we Vary on Accept-Encoding (gzip, deflate)
   Header merge Vary Accept-Encoding
 
-  # If a max-age is set, propagate it into s-maxage for surrogate proxies
-  # unless s-maxage is already set.
-  SetEnvIf Cache-Control max-age=([[:digit:]]+) S_MAXAGE=$1
-  SetEnvIf Cache-Control s-maxage=([[:digit:]]+) S_MAXAGE=$1
-  Header merge Cache-Control s-maxage=%{S_MAXAGE}e env=S_MAXAGE
-
-  # If must-revalidate is set, propagate it into proxy-revalidate for proxies
-  # unless it's already set.
-  SetEnvIf Cache-Control must-revalidate MUST_REVALIDATE=$0
-  Header merge Cache-Control proxy-revalidate env=MUST_REVALIDATE
-
   # Stale serving is a good thing!
   Header merge Cache-Control stale-while-revalidate=86400
   Header merge Cache-Control stale-if-error=86400
+
+  Header add X-Server cache
 
 </VirtualHost>
