--- a/apache/log.conf
+++ b/apache/log.conf
@@ -2,5 +2,6 @@ ServerName apache
 HostnameLookups Off
 BufferedLogs On
 ErrorLog syslog
-CustomLog "|/usr/bin/logger --tag apache --stderr" "%h %V %m %U %q %>s %D %B \"%{X-Forwarded-For}i\""
+SetEnvIf Request_URI "^/(favicon.ico|robots.txt)$" dontlog
+CustomLog "|/usr/bin/logger --tag apache --stderr" "%v %R %V %m %U %q %>s %D %B \"%{X-Forwarded-For}i\"" env=!nolog
 EnableSendFile On
