--- a/apache/log.conf
+++ b/apache/log.conf
@@ -1,7 +1,7 @@
 ServerName apache
 HostnameLookups Off
-BufferedLogs On
+#BufferedLogs On
 ErrorLog syslog
-SetEnvIf Request_URI "^/(favicon.ico|robots.txt)$" dontlog
-CustomLog "|/usr/bin/logger --tag apache --stderr" "%v %R %V %m %U %q %>s %D %B \"%{X-Forwarded-For}i\"" env=!nolog
+SetEnvIf Request_URI "^/(favicon.ico|robots.txt)$" nolog
+CustomLog "|/usr/bin/logger --tag apache --stderr" "%v %R %V %m %>U %q %>s %D %B \"%{X-Forwarded-For}i\"" env=!nolog
 EnableSendFile On
