Fixed dir indexes, particularly for /wp-admin/index.php Re-endabled dir slashes fixed php rewrite to use $0 (rewriterule match) instead of %0 (rewritecond match) added more test file fixtures

--- a/apache/default.conf
+++ b/apache/default.conf
@@ -10,13 +10,14 @@
     ProxyPreserveHost On
     DirectoryIndex disabled
     DirectoryIndex index.php
-    DirectorySlash off
+    DirectorySlash on
     Options -Indexes
 
     <Directory /var/www/wp-content/uploads/>
         RemoveHandler .php
     	FallbackResource disabled
         RedirectMatch 404 "\.php"
+        Options -Indexes
     </Directory>
 
     <Location ~ "^/status-(apache|fpm)$">
@@ -49,11 +50,13 @@
     RewriteEngine On
     # Existing actual files are not cached, except for /index.php
     RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} -f
+    RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} -d
     RewriteCond %{REQUEST_FILENAME} !=/index.php
     RewriteRule ^.*$ - [E=no-cache,E=nolog]
     # If there's no actual file then 'forward' via /index.php
     RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} !-f
-    RewriteRule ^.*$ /index.php%0 [QSA,E=!no-cache]
+    RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} !-d
+    RewriteRule ^.*$ /index.php$0 [QSA,E=!no-cache]
 
     AddHandler "proxy:fcgi://fastcgi:9000" .php
     <Location ~ "^/(ping|status)-fpm$">
