renamed nolog env var to no-log for legibility

--- a/apache/default.conf
+++ b/apache/default.conf
@@ -52,7 +52,7 @@
     RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} -f
     RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} -d
     RewriteCond %{REQUEST_FILENAME} !=/index.php
-    RewriteRule ^.*$ - [E=no-cache,E=nolog]
+    RewriteRule ^.*$ - [E=no-cache,E=no-log]
     # If there's no actual file then 'forward' via /index.php
     RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} !-f
     RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} !-d
@@ -73,6 +73,6 @@
     # Output some interesting performance stats.
     Header always set X-Performance "%D %t %l %i %b"
 
-    SetEnvIf Request_URI "^/(favicon.ico|robots.txt)$" nolog
-    CustomLog "|/usr/bin/logger --tag apache --stderr" "%t %R %V %m %U %q %s %D %B \"%{X-Forwarded-For}i\"" env=!nolog
+    SetEnvIf Request_URI "^/(favicon.ico|robots.txt)$" no-log
+    CustomLog "|/usr/bin/logger --tag apache --stderr" "%t %R %V %m %U %q %s %D %B \"%{X-Forwarded-For}i\"" env=!no-log
 </VirtualHost>
