fixed config for status-fpm etc, and simplified the general config to use <Location> blocks, added support for $UPLOADS_REDIR_BASE env var to allow for redirecting 404s for uploads to somewhere else (eg S3)

--- a/apache/default.conf
+++ b/apache/default.conf
@@ -8,30 +8,8 @@
     RequestHeader unset Cookie "expr=-z %{req:Cookie}"
 
     ProxyPreserveHost On
-    DirectoryIndex disabled
-    DirectoryIndex index.php
-    DirectorySlash on
-    Options -Indexes
 
-    <Directory /var/www/wp-content/uploads/>
-        RemoveHandler .php
-    	FallbackResource disabled
-        RedirectMatch 404 "\.php"
-        Options -Indexes
-    </Directory>
-
-    <Location ~ "^/status-(apache|fpm)$">
-        AuthType basic
-        AuthName Stats
-        AuthBasicProvider file
-        AuthUserFile /etc/htpasswd
-        Require user stats
-    </Location>
-
-    <Location "/status-apache">
-        CacheDisable on
-        SetHandler server-status
-    </Location>
+    AddHandler "proxy:fcgi://fastcgi:9000" .php
 
     CacheDetailHeader On
     CacheEnable disk /
@@ -48,20 +26,58 @@
     # Except it and mod_cache do not play nicely together (and mod_cache caches everything as the fallback url)
     # So, we're back to mod_rewrite...
     RewriteEngine On
-    # Existing actual files are not cached, except for /index.php
-    RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} -f
-    RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} -d
-    RewriteCond %{REQUEST_FILENAME} !=/index.php
-    RewriteRule ^.*$ - [E=no-cache,E=no-log]
-    # If there's no actual file then 'forward' via /index.php
-    RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} !-f
-    RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} !-d
-    RewriteRule ^.*$ /index.php$0 [QSA,E=!no-cache]
 
-    AddHandler "proxy:fcgi://fastcgi:9000" .php
-    <Location ~ "^/(ping|status)-fpm$">
+    <Location />
+        DirectoryIndex disabled
+        DirectoryIndex index.php
+        DirectorySlash on
+        Options -Indexes
+
+        # Existing actual files are not cached, except for /index.php
+        RewriteCond %{REQUEST_URI} !=/index.php
+        RewriteCond %{REQUEST_FILENAME} -f
+        RewriteCond %{REQUEST_FILENAME} -d
+        RewriteRule / - [E=no-cache,E=no-log,L]
+
+        # If there's no actual file then 'forward' via /index.php
+        RewriteCond %{REQUEST_FILENAME} !-f
+        RewriteCond %{REQUEST_FILENAME} !-d
+        RewriteCond %{REQUEST_URI} !=/ping-fpm
+        RewriteCond %{REQUEST_URI} !=/status-fpm
+        RewriteRule / /index.php%{REQUEST_URI} [QSA,E=!no-cache]
+    </Location>
+
+    <Directory /var/www/wp-content/uploads/>
+        RemoveHandler .php
+        #FallbackResource disabled
+        DirectoryIndex disabled
+        RedirectMatch 404 "\.php"
+        Options -Indexes
+    </Directory>
+
+    <Location /wp-content/uploads/>
+        RewriteCond %{ENV:UPLOADS_REDIR_BASE} !=""
+        RewriteCond %{REQUEST_FILENAME} !-f
+        RewriteCond %{REQUEST_FILENAME} !-d
+        RewriteRule / %{ENV:UPLOADS_REDIR_BASE}%{REQUEST_URI} [QSA,E=!no-cache,R=permanent,L]
+    </Location>
+
+    <Location ~ ^/status-(apache|fpm)$>
+        AuthType basic
+        AuthName Stats
+        AuthBasicProvider file
+        AuthUserFile /etc/htpasswd
+        Require user stats
+    </Location>
+
+    <Location ~ ^/(ping|status)-fpm$>
         CacheDisable on
         SetHandler "proxy:fcgi://fastcgi:9000"
+    </Location>
+
+    <Location /status-apache>
+        CacheDisable on
+        SetHandler server-status
     </Location>
 
     ExpiresActive On
