--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
           @reboot root bash /etc/container_environment/CMD_HTPASSWD 2>&1 | logger
         # AUTH_USER: stats
         AUTH_PASSWD: password
+        UPLOADS_REDIR_BASE: http://localhost/spoons
         CMD_HTPASSWD: |
           source /etc/container_environment.sh
           /usr/bin/htpasswd -bc /etc/htpasswd $${AUTH_USER:-stats} $${AUTH_PASSWD:-stats}
