tweaked some apache config apparently; increased max file upload size to 8M

--- a/apache/default.conf
+++ b/apache/default.conf
@@ -2,6 +2,7 @@
     ServerName www
     DocumentRoot /var/www
 
+    # TODO make this do the opposite: keep only known cookies.
     # Normalise Cookie: remove known noisy cookies: Google Analytics.
     RequestHeader edit* Cookie "__utm.=.*?(?:$|;\s*)" ""
     # Unset the header if we've no cookies left.
@@ -40,10 +41,13 @@
         RewriteRule / - [E=no-cache,E=no-log,L]
 
         # If there's no actual file then 'forward' via /index.php
+        # Mark the X-Forwarded-Proto header for Vary
+        RewriteCond %{HTTP:X-Forwarded-Proto} "https?"
         RewriteCond %{REQUEST_FILENAME} !-f
         RewriteCond %{REQUEST_FILENAME} !-d
         RewriteCond %{REQUEST_URI} !=/ping-fpm
         RewriteCond %{REQUEST_URI} !=/status-fpm
+
         RewriteRule / /index.php%{REQUEST_URI} [QSA,E=!no-cache]
     </Location>
 
@@ -81,10 +85,7 @@
     </Location>
 
     ExpiresActive On
-    ExpiresDefault "access plus 5 minutes"
-
-    # Vary on the protocol, as we use this header to punk is_ssl in wordpress.
-    Header merge Vary X-Forwarded-Proto
+    ExpiresDefault "modified plus 1 years"
 
     # Output some interesting performance stats.
     Header always set X-Performance "%D %t %l %i %b"
