--- a/fpm/www.conf
+++ b/fpm/www.conf
@@ -400,3 +400,5 @@ php_admin_flag[log_errors] = on
 php_admin_value[memory_limit] = 128M
 ;php_value[cgi.fix_pathinfo] = 0
 ;php_value[proxy-fcgi-pathinfo] = 0
+php_admin_value[upload_max_filesize] = 8M
+
