--- a/apache/default.conf
+++ b/apache/default.conf
@@ -12,6 +12,7 @@
 
     AddHandler "proxy:fcgi://fastcgi:9000" .php
 
+    CacheSocache memcache:memcached:11211
     CacheDetailHeader On
     CacheEnable disk /
     CacheHeader On
