--- a/apache/default.conf
+++ b/apache/default.conf
@@ -12,15 +12,16 @@
 
     AddHandler "proxy:fcgi://fastcgi:9000" .php
 
-    CacheSocache memcache:memcached:11211
+    CacheSocache memcache:memcache:11211
     CacheDetailHeader On
-    CacheEnable disk /
     CacheHeader On
     CacheIgnoreHeaders Set-Cookie
     CacheIgnoreNoLastMod On # Use CacheDefaultExpire (defaults to one hour)
     CacheLock On
     CacheStoreExpired On
     CacheQuickHandler Off
+    CacheEnable socache /
+    CacheEnable disk /
 
     # https://httpd.apache.org/docs/2.4/mod/mod_dir.html#fallbackresource
     # This is the contemporary way to hand requests off to PHP/WP/whatever
@@ -35,8 +36,11 @@
         DirectorySlash on
         Options -Indexes
 
-        # Existing actual files are not cached, except for /index.php
-        RewriteCond %{REQUEST_URI} !=/index.php
+        # Except for .php ... 
+        RewriteCond %{REQUEST_URI} "\.php$"
+        RewriteRule / - [S=2,E=!no-cache]
+
+        # Existing actual files are not cached
         RewriteCond %{REQUEST_FILENAME} -f
         RewriteCond %{REQUEST_FILENAME} -d
         RewriteRule / - [E=no-cache,E=no-log,L]
@@ -48,7 +52,7 @@
         RewriteCond %{REQUEST_FILENAME} !-d
         RewriteCond %{REQUEST_URI} !=/ping-fpm
         RewriteCond %{REQUEST_URI} !=/status-fpm
-
+        RewriteCond %{REQUEST_URI} !=/status-apache
         RewriteRule / /index.php%{REQUEST_URI} [QSA,E=!no-cache]
     </Location>
 
@@ -68,6 +72,7 @@
     </Location>
 
     <Location ~ ^/status-(apache|fpm)$>
+        CacheDisable on
         AuthType basic
         AuthName Stats
         AuthBasicProvider file
@@ -85,9 +90,13 @@
         SetHandler server-status
     </Location>
 
-    ExpiresActive On
-    ExpiresDefault "modified plus 1 years"
+    # <Location ~ "\.php$">
+    #     CacheEnable socache
+    #     CacheEnable disk
+    # </Location>
 
+    ExpiresActive On
+    
     # Output some interesting performance stats.
     Header always set X-Performance "%D %t %l %i %b"
 
