--- a/fpm/www.conf
+++ b/fpm/www.conf
@@ -402,3 +402,5 @@ php_admin_value[memory_limit] = 128M
 ;php_value[proxy-fcgi-pathinfo] = 0
 php_admin_value[upload_max_filesize] = 8M
 
+php_admin_value[session.save_handler] = memcache
+php_admin_value[session.save_path] = "tcp://memcache:112211?persistent=1&weight=1&timeout=1&retry_interval=15"
