actually proper no-cache handling; but still no socache save

--- a/apache/default.conf
+++ b/apache/default.conf
@@ -11,6 +11,8 @@
     ProxyPreserveHost On
 
     AddHandler "proxy:fcgi://fastcgi:9000" .php
+    # AddType application/php .php
+    # AddOutputFilterByType CACHE application/php
 
     CacheSocache memcache:memcache:11211
     CacheDetailHeader On
@@ -20,13 +22,14 @@
     CacheLock On
     CacheStoreExpired On
     CacheQuickHandler Off
+    
     CacheEnable socache /
     CacheEnable disk /
 
     # https://httpd.apache.org/docs/2.4/mod/mod_dir.html#fallbackresource
     # This is the contemporary way to hand requests off to PHP/WP/whatever
-    #FallbackResource /index.php
-    # Except it and mod_cache do not play nicely together (and mod_cache caches everything as the fallback url)
+    # FallbackResource /index.php
+    # Except it and mod_cache (CacheQuickHandler off) do not play nicely together (and mod_cache caches everything as the fallback url)
     # So, we're back to mod_rewrite...
     RewriteEngine On
 
@@ -36,29 +39,26 @@
         DirectorySlash on
         Options -Indexes
 
-        # Except for .php ... 
-        RewriteCond %{REQUEST_URI} "\.php$"
-        RewriteRule / - [S=2,E=!no-cache]
+        # For .php don't try anything else
+        RewriteCond %{REQUEST_FILENAME} ^.+\.php$
+        RewriteCond %{REQUEST_FILENAME} -f
+        RewriteRule / - [E=!no-cache,E=!no-log,S=2]
 
         # Existing actual files are not cached
-        RewriteCond %{REQUEST_FILENAME} -f
-        RewriteCond %{REQUEST_FILENAME} -d
-        RewriteRule / - [E=no-cache,E=no-log,L]
+        RewriteCond %{REQUEST_FILENAME} -f [OR]
+        # Neither are our special URL's
+        RewriteCond %{REQUEST_URI} =/ping-fpm [OR]
+        RewriteCond %{REQUEST_URI} =/status-fpm [OR]
+        RewriteCond %{REQUEST_URI} =/status-apache
+        RewriteRule / - [E=no-cache,E=no-log,S=1]
 
-        # If there's no actual file then 'forward' via /index.php
-        # Mark the X-Forwarded-Proto header for Vary
-        RewriteCond %{HTTP:X-Forwarded-Proto} "https?"
-        RewriteCond %{REQUEST_FILENAME} !-f
-        RewriteCond %{REQUEST_FILENAME} !-d
-        RewriteCond %{REQUEST_URI} !=/ping-fpm
-        RewriteCond %{REQUEST_URI} !=/status-fpm
-        RewriteCond %{REQUEST_URI} !=/status-apache
-        RewriteRule / /index.php%{REQUEST_URI} [QSA,E=!no-cache]
+        # If we get to here then there's no real file and it's not PHP
+        RewriteRule / /index.php%{REQUEST_URI} [QSA,E=!no-cache,E=!no-log,PT]
     </Location>
 
     <Directory /var/www/wp-content/uploads/>
         RemoveHandler .php
-        #FallbackResource disabled
+        # FallbackResource disabled
         DirectoryIndex disabled
         RedirectMatch 404 "\.php"
         Options -Indexes
@@ -90,16 +90,10 @@
         SetHandler server-status
     </Location>
 
-    # <Location ~ "\.php$">
-    #     CacheEnable socache
-    #     CacheEnable disk
-    # </Location>
-
     ExpiresActive On
     
     # Output some interesting performance stats.
     Header always set X-Performance "%D %t %l %i %b"
 
-    SetEnvIf Request_URI "^/(favicon.ico|robots.txt)$" no-log
-    CustomLog "|/usr/bin/logger --tag apache --stderr" "%t %R %V %m %U %q %s %D %B \"%{X-Forwarded-For}i\"" env=!no-log
+    SetEnvIf Request_URI "^/(favicon.ico|robots.txt|sitemap.xml)$" no-log
 </VirtualHost>
