--- a/apache/default.conf
+++ b/apache/default.conf
@@ -18,11 +18,13 @@
     CacheDetailHeader On
     CacheHeader On
     CacheIgnoreHeaders Set-Cookie
-    CacheIgnoreNoLastMod On # Use CacheDefaultExpire (defaults to one hour)
+    # Use CacheDefaultExpire (defaults to one hour)
+    CacheIgnoreNoLastMod On 
     CacheLock On
     CacheStoreExpired On
     CacheQuickHandler Off
-    
+    # 10K max to store in memcached, larger items on disk
+    CacheSocacheMaxSize 10240 
     CacheEnable socache /
     CacheEnable disk /
 
@@ -44,7 +46,7 @@
         RewriteCond %{REQUEST_FILENAME} -f
         RewriteRule / - [E=!no-cache,E=!no-log,S=2]
 
-        # Existing actual files are not cached
+        # Existing actual files are not cached nor rewritten
         RewriteCond %{REQUEST_FILENAME} -f [OR]
         # Neither are our special URL's
         RewriteCond %{REQUEST_URI} =/ping-fpm [OR]
@@ -53,6 +55,8 @@
         RewriteRule / - [E=no-cache,E=no-log,S=1]
 
         # If we get to here then there's no real file and it's not PHP
+        # So, unless it is a dir, rewrite it
+        RewriteCond %{REQUEST_FILENAME} !-d
         RewriteRule / /index.php%{REQUEST_URI} [QSA,E=!no-cache,E=!no-log,PT]
     </Location>
 
