abandoned socache; it just does not want to work and there is no support anywhere

--- a/apache/default.conf
+++ b/apache/default.conf
@@ -2,6 +2,8 @@
     ServerName www
     DocumentRoot /var/www
 
+    LogLevel cache:trace2 cache_socache:trace2 socache_memcache:trace2 socache_shmcb:trace2
+
     # TODO make this do the opposite: keep only known cookies.
     # Normalise Cookie: remove known noisy cookies: Google Analytics.
     RequestHeader edit* Cookie "__utm.=.*?(?:$|;\s*)" ""
@@ -14,7 +16,7 @@
     # AddType application/php .php
     # AddOutputFilterByType CACHE application/php
 
-    CacheSocache memcache:memcache:11211
+    # CacheSocache memcache:memcache:11211
     CacheDetailHeader On
     CacheHeader On
     CacheIgnoreHeaders Set-Cookie
@@ -22,10 +24,9 @@
     CacheIgnoreNoLastMod On 
     CacheLock On
     CacheStoreExpired On
+    CacheStoreNoStore On
     CacheQuickHandler Off
-    # 10K max to store in memcached, larger items on disk
-    CacheSocacheMaxSize 10240 
-    CacheEnable socache /
+    # CacheEnable socache /
     CacheEnable disk /
 
     # https://httpd.apache.org/docs/2.4/mod/mod_dir.html#fallbackresource
@@ -41,10 +42,14 @@
         DirectorySlash on
         Options -Indexes
 
-        # For .php don't try anything else
+        # For .php 
         RewriteCond %{REQUEST_FILENAME} ^.+\.php$
-        RewriteCond %{REQUEST_FILENAME} -f
-        RewriteRule / - [E=!no-cache,E=!no-log,S=2]
+        # If it doesn't exist, bail.
+        RewriteCond %{REQUEST_FILENAME} !-f
+        RewriteRule / - [E=!no-cache,E=!no-log,F]
+        # Otherwise don't try anything else 
+        RewriteCond %{REQUEST_FILENAME} ^.+\.php$
+        RewriteRule / - [E=!no-cache,E=!no-log,L]
 
         # Existing actual files are not cached nor rewritten
         RewriteCond %{REQUEST_FILENAME} -f [OR]
@@ -52,12 +57,12 @@
         RewriteCond %{REQUEST_URI} =/ping-fpm [OR]
         RewriteCond %{REQUEST_URI} =/status-fpm [OR]
         RewriteCond %{REQUEST_URI} =/status-apache
-        RewriteRule / - [E=no-cache,E=no-log,S=1]
+        RewriteRule / - [E=no-cache,E=no-log,L]
 
         # If we get to here then there's no real file and it's not PHP
         # So, unless it is a dir, rewrite it
         RewriteCond %{REQUEST_FILENAME} !-d
-        RewriteRule / /index.php%{REQUEST_URI} [QSA,E=!no-cache,E=!no-log,PT]
+        RewriteRule / /index.php%{REQUEST_URI} [QSA,E=!no-cache,E=!no-log,L]
     </Location>
 
     <Directory /var/www/wp-content/uploads/>
