--- a/apache/log.conf
+++ b/apache/log.conf
@@ -2,8 +2,5 @@ ServerName apache
 HostnameLookups Off
 #BufferedLogs On
 ErrorLog syslog
-#ErrorLog "|/usr/bin/logger --tag apache --stderr"
 EnableSendFile On
-CustomLog "|/usr/bin/logger --tag apache --stderr" "%t %R %V %m %U %q %s %D %B \"%{X-Forwarded-For}i\" \"%{cache-status}e\"" 
-#env=!no-log
-LogLevel debug rewrite:trace2
+CustomLog "|/usr/bin/logger --tag apache" "%t %R %V %m %U %q %s %D %B \"%{X-Forwarded-For}i\" \"%{cache-status}e\"" env=!no-log
