PHP sessions in memcache work, and socache!

--- a/fpm/Dockerfile
+++ b/fpm/Dockerfile
@@ -3,7 +3,7 @@ FROM nickbreen/wp-php:v1.3.3
 MAINTAINER Nick Breen <nick@foobar.net.nz>
 
 RUN apt-get update -y \
-    && DEBIAN_FRONTEND=noninteractive apt-get install -qqy php-fpm php-memcached \
+    && DEBIAN_FRONTEND=noninteractive apt-get install -qqy php-fpm php-memcache \
     && apt-get clean -y
 
 # Configure a service entry for Apache
@@ -12,7 +12,7 @@ COPY run /etc/service/php-fpm/run
 COPY www.conf /etc/php/7.0/fpm/pool.d/
 
 # Enable for FPM
-RUN phpenmod curl gd imagick json logging mysqli oauth opcache memcached && phpdismod newrelic
+RUN phpenmod curl gd imagick json logging mysqli oauth opcache memcache && phpdismod newrelic
 
 ENV DOCROOT=/var/www
 
