--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
 
     memcache:
       image: memcached
-      command: memcached -m 256 -vvv
+      command: memcached -m 256 -v
       ports:
         - 11211:11211
 
