--- a/fpm/www.conf
+++ b/fpm/www.conf
@@ -403,4 +403,4 @@ php_admin_value[memory_limit] = 128M
 php_admin_value[upload_max_filesize] = 8M
 
 php_admin_value[session.save_handler] = memcache
-php_admin_value[session.save_path] = "tcp://memcache:11211?persistent=1&weight=1&timeout=1&retry_interval=15"
+php_admin_value[session.save_path] = "tcp://memcache:11211"
