PHP sessions in memcache work, and socache!

--- a/apache/default.conf
+++ b/apache/default.conf
@@ -2,9 +2,10 @@
     ServerName www
     DocumentRoot /var/www
 
-    LogLevel cache:trace2 cache_socache:trace2 socache_memcache:trace2 socache_shmcb:trace2
-
     # TODO make this do the opposite: keep only known cookies.
+    # - PHPSESSID?
+    # - wordpress*?
+    # - woocommerce?
     # Normalise Cookie: remove known noisy cookies: Google Analytics.
     RequestHeader edit* Cookie "__utm.=.*?(?:$|;\s*)" ""
     # Unset the header if we've no cookies left.
@@ -16,18 +17,22 @@
     # AddType application/php .php
     # AddOutputFilterByType CACHE application/php
 
-    # CacheSocache memcache:memcache:11211
+    CacheEnable socache /
+    CacheEnable disk /
+    CacheSocacheMaxSize 10240
+    CacheSocache memcache:memcache:11211
+    # CacheSocache shmcb
     CacheDetailHeader On
     CacheHeader On
     CacheIgnoreHeaders Set-Cookie
+    # CacheIgnoreURLSessionIdentifiers PHPSESSID
     # Use CacheDefaultExpire (defaults to one hour)
+    CacheDefaultExpire 300
     CacheIgnoreNoLastMod On 
     CacheLock On
     CacheStoreExpired On
-    CacheStoreNoStore On
+    # CacheStoreNoStore On
     CacheQuickHandler Off
-    # CacheEnable socache /
-    CacheEnable disk /
 
     # https://httpd.apache.org/docs/2.4/mod/mod_dir.html#fallbackresource
     # This is the contemporary way to hand requests off to PHP/WP/whatever
@@ -52,19 +57,23 @@
         RewriteRule / - [E=!no-cache,E=!no-log,L]
 
         # Existing actual files are not cached nor rewritten
-        RewriteCond %{REQUEST_FILENAME} -f [OR]
+        # It's nice to keep smaller files in memcache, so let them cache
+        # RewriteCond %{REQUEST_FILENAME} -f [OR]
+        RewriteCond expr "filesize('%{REQUEST_FILENAME}') -gt 10240" [OR]
         # Neither are our special URL's
         RewriteCond %{REQUEST_URI} =/ping-fpm [OR]
         RewriteCond %{REQUEST_URI} =/status-fpm [OR]
         RewriteCond %{REQUEST_URI} =/status-apache
-        RewriteRule / - [E=no-cache,E=no-log,L]
+        RewriteRule / - [E=no-cache,E=no-log,E=no-cookie,L]
 
         # If we get to here then there's no real file and it's not PHP
-        # So, unless it is a dir, rewrite it
+        RewriteCond %{REQUEST_FILENAME} !-f
         RewriteCond %{REQUEST_FILENAME} !-d
         RewriteRule / /index.php%{REQUEST_URI} [QSA,E=!no-cache,E=!no-log,L]
     </Location>
 
+    RequestHeader unset Cookie env=no-cookie
+    
     <Directory /var/www/wp-content/uploads/>
         RemoveHandler .php
         # FallbackResource disabled
