--- a/apache/log.conf
+++ b/apache/log.conf
@@ -4,3 +4,6 @@ HostnameLookups Off
 ErrorLog syslog
 EnableSendFile On
 CustomLog "|/usr/bin/logger --tag apache" "%t %R %V %m %U %q %s %D %B \"%{X-Forwarded-For}i\" \"%{cache-status}e\"" env=!no-log
+<If "-n env('DEBUG')">
+LogLevel cache:debug cache_disk:debug cache_socache:debug socache_memcache:debug socache_shmcb:debug
+</If>
