--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,12 @@ services:
 
     memcache:
       image: memcached
-      command: memcached -m 256 -vvv
+      command: memcached -m 256 -vv
       ports:
         - 11211:11211
 
     apache:
-      image: nickbreen/wp-php:apache-v2.3.0
+      image: nickbreen/wp-www:apache-v2.3.0
       build:
           context: apache
       ports:
@@ -19,6 +19,7 @@ services:
       volumes:
         - ./www:/var/www
       environment:
+        DEBUG: 1
         CRON_D_HTCACHECLEAN: |
           @hourly www-data /usr/bin/htcacheclean -p /var/cache/apache2/mod_cache_disk -n -v -t -l 64M 2>&1 | logger
           @reboot root bash /etc/container_environment/CMD_HTPASSWD 2>&1 | logger
@@ -30,7 +31,7 @@ services:
           /usr/bin/htpasswd -bc /etc/htpasswd $${AUTH_USER:-stats} $${AUTH_PASSWD:-stats}
 
     fpm:
-      image: nickbreen/wp-php:fpm-v2.3.0
+      image: nickbreen/wp-www:fpm-v2.3.0
       build:
           context: fpm
       volumes:
