fixed debug test for logging

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         - 11211:11211
 
     apache:
-      image: nickbreen/wp-www:apache-v2.3.0
+      image: nickbreen/wp-www:apache-v2.3.1
       build:
           context: apache
       ports:
@@ -19,7 +19,7 @@ services:
       volumes:
         - ./www:/var/www
       environment:
-        DEBUG: 1
+        DEBUG: "yes"
         CRON_D_HTCACHECLEAN: |
           @hourly www-data /usr/bin/htcacheclean -p /var/cache/apache2/mod_cache_disk -n -v -t -l 64M 2>&1 | logger
           @reboot root bash /etc/container_environment/CMD_HTPASSWD 2>&1 | logger
@@ -31,7 +31,7 @@ services:
           /usr/bin/htpasswd -bc /etc/htpasswd $${AUTH_USER:-stats} $${AUTH_PASSWD:-stats}
 
     fpm:
-      image: nickbreen/wp-www:fpm-v2.3.0
+      image: nickbreen/wp-www:fpm-v2.3.1
       build:
           context: fpm
       volumes:
